# esp-idf-sc-monoblock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
components/fmt/: CMakeLists.txt
components/lorawan/: CMakeLists.txt  Kconfig
components/lorawan/include/: LorawanActivator.h  LorawanClient.h  LorawanDevice.h  LorawanLauncher.h  LorawanListener.h  LorawanParameters.h  LorawanUtil.h
components/lorawan/src/: LorawanClientImpl.cpp  LorawanClientImpl.h  LorawanLauncher.cpp  LorawanUtil.cpp  esp_idf_lmic_config.h
components/lorawan/src/driver/: LorawanDriver.cpp  LorawanHAL.h  (+7 more)
components/nlohmann_json/: CMakeLists.txt
components/os/: CMakeLists.txt  RingBuffer.cpp  Semaphore.cpp  Task.cpp  Timer.cpp
components/os/include/: RingBuffer.h  Semaphore.h  Task.h  Timer.h
components/smooth/: CMakeLists.txt  sdkconfig
components/sys/: CMakeLists.txt  GeneralUtils.cpp  System.cpp
components/sys/include/: GeneralUtils.h  System.h
main/example/fmt/: CMakeLists.txt  ExampleFmt.cpp  ExampleFmt.h  main.cpp
main/example/lorawan/: CMakeLists.txt  CounterStatistics.cpp  CounterStatistics.h  SCExampleLauncher.cpp  SCExampleLauncher.h  SCExampleLorawanTask.cpp  SCExampleLorawanTask.h  main.cpp
main/example/njson/: CMakeLists.txt  ExampleNJson.cpp  ExampleNJson.h  main.cpp
main/example/simpletask/: CMakeLists.txt  TestTask.cpp  TestTask.h  main.cpp
main/example/starter_example/: CMakeLists.txt  main.cpp  starter_example.cpp  starter_example.h
main/example/task_event_queue/: CMakeLists.txt  main.cpp  task_event_queue.cpp  task_event_queue.h
(+24 files in other folders)
